# backend

./: .gitignore  README.md  pyproject.toml
backend/: asgi.py  settings.py  urls.py
chat/: consumers.py  operations_with_db.py  routing.py  urls.py
chat/templates/chat/: index.html
chat_api/: admin.py  models.py  serializers.py  urls.py  views.py
chat_api/migrations/: 0001_initial.py  0002_message_username.py  0003_rename_content_message_message.py
