[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dmytro Kozak <kozakdmitro15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.4"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
six = "^1.16.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
